--- a/.gitignore
+++ b/.gitignore
@@ -72,3 +72,10 @@ Plugins/**/Intermediate/*
 
 # Cache files for the editor to use
 DerivedDataCache/*
+
+# Ignorar todos os assets brutos
+Content/*
+
+# Manter apenas os assets "cozidos"
+!Saved/Cooked/**
+
